* updated Reports * update refresh process script
git-svn-id: file:///var/repos/aps/Synergy/trunk@150 74b2d9da-2730-d14b-887d-b15a5e3d2562

--- a/Reports/Development/Template/LandscapeTemplate.rdl
+++ b/Reports/Development/Template/LandscapeTemplate.rdl
@@ -875,6 +875,9 @@ ORDER BY
             <Height>0.4375in</Height>
             <Width>9.63542in</Width>
             <ZIndex>1</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -908,6 +911,9 @@ ORDER BY
             <Height>0.4in</Height>
             <Width>9.63542in</Width>
             <ZIndex>2</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -925,6 +931,9 @@ ORDER BY
             <Height>0.87375in</Height>
             <Width>0.83681in</Width>
             <ZIndex>3</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -1010,6 +1019,9 @@ ORDER BY
             <Height>0.79167in</Height>
             <Width>2.45833in</Width>
             <ZIndex>4</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
