--- a/Reports/Development/Template/Portrait Template.rdl
+++ b/Reports/Development/Template/Portrait Template.rdl
@@ -930,6 +930,9 @@ ORDER BY
             <Height>0.79167in</Height>
             <Width>2.45833in</Width>
             <ZIndex>1</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -965,6 +968,9 @@ ORDER BY
             <Height>0.4375in</Height>
             <Width>7.13542in</Width>
             <ZIndex>2</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -998,6 +1004,9 @@ ORDER BY
             <Height>0.4in</Height>
             <Width>7.13542in</Width>
             <ZIndex>3</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -1015,6 +1024,9 @@ ORDER BY
             <Height>0.87375in</Height>
             <Width>0.83681in</Width>
             <ZIndex>4</ZIndex>
+            <Visibility>
+              <Hidden>=IIF(Globals!RenderFormat.Name = "EXCELOPENXML", True, False)</Hidden>
+            </Visibility>
             <Style>
               <Border>
                 <Style>None</Style>
