--- a/Reports/Development/Template/Portrait Template.rdl
+++ b/Reports/Development/Template/Portrait Template.rdl
@@ -131,6 +131,27 @@ ORDER BY
         </Field>
       </Fields>
     </DataSet>
+    <DataSet Name="FocusFromUser">
+      <SharedDataSet>
+        <SharedDataSetReference>/Data Sets/FocusFromUser</SharedDataSetReference>
+        <QueryParameters>
+          <QueryParameter Name="@User">
+            <Value>=Parameters!User.Value</Value>
+          </QueryParameter>
+        </QueryParameters>
+        <rd:ReportServerUrl>http://synergyreports.aps.edu/ReportServer</rd:ReportServerUrl>
+      </SharedDataSet>
+      <Fields>
+        <Field Name="FOCUS_ORGANIZATION_GU">
+          <DataField>FOCUS_ORGANIZATION_GU</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="FOCUS_YEAR_GU">
+          <DataField>FOCUS_YEAR_GU</DataField>
+          <rd:TypeName>System.Guid</rd:TypeName>
+        </Field>
+      </Fields>
+    </DataSet>
   </DataSets>
   <ReportSections>
     <ReportSection>
@@ -1254,6 +1275,12 @@ ORDER BY
     </ReportParameter>
     <ReportParameter Name="School">
       <DataType>String</DataType>
+      <DefaultValue>
+        <DataSetReference>
+          <DataSetName>FocusFromUser</DataSetName>
+          <ValueField>FOCUS_ORGANIZATION_GU</ValueField>
+        </DataSetReference>
+      </DefaultValue>
       <Prompt>School</Prompt>
       <ValidValues>
         <DataSetReference>
