* updated reports * Changed PGM-1401 and renamed (added expand/collapse all)
git-svn-id: file:///var/repos/aps/Synergy/trunk@203 74b2d9da-2730-d14b-887d-b15a5e3d2562

--- a/Reports/Development/Template/Portrait Template.rdl
+++ b/Reports/Development/Template/Portrait Template.rdl
@@ -879,7 +879,7 @@ ORDER BY
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Paramaters</Value>
+                    <Value>Parameters</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>12pt</FontSize>
