* Fixed Sort on Bilingual Models and Hours * Fixed Query for tagged sections query/Report * Added Tagged Sections Not Qualified Report
git-svn-id: file:///var/repos/aps/Synergy/trunk@231 74b2d9da-2730-d14b-887d-b15a5e3d2562

--- a/Reports/Student Programs/List/PGM-1403 Bilingual Model and Hours Detail.rdl
+++ b/Reports/Student Programs/List/PGM-1403 Bilingual Model and Hours Detail.rdl
@@ -1419,6 +1419,9 @@ IIF(Fields!ALSOT.Value&lt;&gt;"",", "+Fields!ALSOT.Value,"")
                       </Group>
                       <SortExpressions>
                         <SortExpression>
+                          <Value>=Fields!EnrollGradeOrder.Value</Value>
+                        </SortExpression>
+                        <SortExpression>
                           <Value>=Fields!StudentLastName.Value+Fields!StudentFirstName.Value+Fields!StudentID.Value</Value>
                         </SortExpression>
                       </SortExpressions>
